@@ -1,5 +1,12 @@
 2004-05-31  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/statusline.cc (Status::set_file_encoding): Work around the
+	GTK+ bug with right-aligned labels by calling check_resize(), just
+	as already done in CounterBox::set_index().  Note that the status
+	bar is right-aligned only in RTL locales.
+
+2004-05-31  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/aboutdialog.cc (AboutDialog::create): If no translation is
 	available for the current locale, replace "translator-credits" by
 	some more user-friendly text.
